# extension-wos-porter

./: .gitignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  uninstall.js
.claude-plugin/: marketplace.json
.github/workflows/: build-ubuntu.yml  build-windows-arm64.yml  (+2 more)
agents/: arm64-analyzer.agent.md  arm64-build-porter.agent.md  arm64-builder.agent.md  arm64-code-porter.agent.md  arm64-porter.agent.md  arm64-whl-porter.agent.md  wos-analyzer.agent.md  wos-build-porter.agent.md  wos-builder.agent.md  wos-code-porter.agent.md  wos-etl-hotspot.agent.md  wos-optimizer.agent.md  wos-porter.agent.md  wos-tester.agent.md  wos-whl-porter.agent.md
claude-plugin/: README.md
claude-plugin/skills/arm64-inlineasm-to-intrinsics/assets/Verification/: CMakeLists.txt
claude-plugin/skills/arm64-inlineasm-to-intrinsics/assets/Verification/include/: kernel_compare.h
claude-plugin/skills/arm64-inlineasm-to-intrinsics/assets/Verification/src/: kernel_intrinsics.cpp  kernel_reference.cpp
etl_hotspot_tool/: hotspot_analysis.py
instructions/: wos-build-errors.instructions.md  wos-build-recipes-cargo.instructions.md  wos-build-recipes-cmake.instructions.md  wos-build-recipes-meson.instructions.md  wos-build-recipes-misc.instructions.md  wos-build-recipes-msbuild.instructions.md  wos-build-recipes-nodegyp.instructions.md  wos-build-recipes-python.instructions.md  wos-ci-arm64.instructions.md  wos-porting-knowledge.instructions.md
prompts/: wos-verify-port.prompt.md
scripts/: verify-manifests.js
src/: extension.ts
(+78 files in other folders)
